opam-version: "2.0"
synopsis: "relude!"
maintainer: [
  "Michael Martin"
  "Andy White"
]
# authors: [""]
# license: ""
tags: []
homepage: "https://github.com/reazen/relude"
# doc: ""
bug-reports: "https://github.com/reazen/relude/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "odoc" {>= "1.5.0" & with-doc}
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "bastet" {dev}
  "melange-jest" {>= "0.1.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "--debug-dependency-path"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
pin-depends: [
  [ "bastet.dev" "git+https://github.com/Emilios1995/bastet.git#melange" ]
]
